<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_auto_record</name>
  <version>1.0.0</version>
  <description>Record the custom topics automatically</description>
  <maintainer email="defateyz@gmail.com">Zheng Yu</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/FaterYU/rm_auto_record</url>
  <url type="bugtracker">https://github.com/FaterYU/rm_auto_record/issues</url>
  <author email="defateyz@gmail.com">Zheng Yu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
